--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Agency</title>
+    <title>Travel Agency with Voiceflow</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -57,5 +57,20 @@
         <p>&copy; 2024 Global Adventures Travel Agency</p>
     </footer>
     <script src="script.js"></script>
+    <!-- Voiceflow Embed Start -->
+    <script type="text/javascript">
+      (function(d, t) {
+        var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+        v.onload = function() {
+          window.voiceflow.chat.load({
+            verify: { projectID: '669eaab719aefe10487c4410' },
+            url: 'https://general-runtime.voiceflow.com',
+            versionID: 'production'
+          });
+        };
+        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+      })(document, 'script');
+    </script>
+    <!-- Voiceflow Embed End -->
 </body>
 </html>
