--- a/index.html
+++ b/index.html
@@ -8,53 +8,59 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Global Adventures Travel Agency</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#destinations">Destinations</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Welcome to Global Adventures Travel Agency</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#destinations">Destinations</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <section id="home">
-            <h2>Discover Your Next Adventure</h2>
-            <p>We offer personalized travel packages to the most exotic destinations around the world.</p>
-        </section>
-        <section id="destinations">
-            <h2>Popular Destinations</h2>
-            <div class="destination">
-                <h3>Paris, France</h3>
-                <p>Experience the city of lights with our exclusive Paris tour package.</p>
-            </div>
-            <div class="destination">
-                <h3>Bali, Indonesia</h3>
-                <p>Relax on the beautiful beaches of Bali with our all-inclusive resort package.</p>
-            </div>
-            <div class="destination">
-                <h3>Kyoto, Japan</h3>
-                <p>Explore the rich cultural heritage of Kyoto with our guided tours.</p>
-            </div>
-        </section>
-        <section id="services">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Personalized travel planning</li>
-                <li>Flight and hotel bookings</li>
-                <li>Guided tours and excursions</li>
-                <li>24/7 customer support</li>
-            </ul>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:info@globaladventures.com">info@globaladventures.com</a></p>
-            <p>Phone: +1-800-123-4567</p>
-        </section>
+        <div class="container">
+            <section id="home">
+                <h2>Discover Your Next Adventure</h2>
+                <p>We offer personalized travel packages to the most exotic destinations around the world.</p>
+            </section>
+            <section id="destinations">
+                <h2>Popular Destinations</h2>
+                <div class="destination">
+                    <h3>Paris, France</h3>
+                    <p>Experience the city of lights with our exclusive Paris tour package.</p>
+                </div>
+                <div class="destination">
+                    <h3>Bali, Indonesia</h3>
+                    <p>Relax on the beautiful beaches of Bali with our all-inclusive resort package.</p>
+                </div>
+                <div class="destination">
+                    <h3>Kyoto, Japan</h3>
+                    <p>Explore the rich cultural heritage of Kyoto with our guided tours.</p>
+                </div>
+            </section>
+            <section id="services">
+                <h2>Our Services</h2>
+                <ul>
+                    <li>Personalized travel planning</li>
+                    <li>Flight and hotel bookings</li>
+                    <li>Guided tours and excursions</li>
+                    <li>24/7 customer support</li>
+                </ul>
+            </section>
+            <section id="contact">
+                <h2>Contact Us</h2>
+                <p>Email: <a href="mailto:info@globaladventures.com">info@globaladventures.com</a></p>
+                <p>Phone: +1-800-123-4567</p>
+            </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Global Adventures Travel Agency</p>
+        <div class="container">
+            <p>&copy; 2024 Global Adventures Travel Agency</p>
+        </div>
     </footer>
     <script src="script.js"></script>
     <!-- Voiceflow Embed Start -->
