--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <h1>Welcome to Global Adventures Travel Agency</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#destinations">Destinations</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="tours.html">Tours</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -49,11 +50,6 @@
                     <li>Guided tours and excursions</li>
                     <li>24/7 customer support</li>
                 </ul>
-            </section>
-            <section id="contact">
-                <h2>Contact Us</h2>
-                <p>Email: <a href="mailto:info@globaladventures.com">info@globaladventures.com</a></p>
-                <p>Phone: +1-800-123-4567</p>
             </section>
         </div>
     </main>
