--- a/tours.html
+++ b/tours.html
@@ -34,5 +34,20 @@
             <p>&copy; 2024 Global Adventures Travel Agency</p>
         </div>
     </footer>
+    <!-- Voiceflow Embed Start -->
+    <script type="text/javascript">
+      (function(d, t) {
+        var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+        v.onload = function() {
+          window.voiceflow.chat.load({
+            verify: { projectID: '669eaab719aefe10487c4410' },
+            url: 'https://general-runtime.voiceflow.com',
+            versionID: 'production'
+          });
+        };
+        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+      })(document, 'script');
+    </script>
+    <!-- Voiceflow Embed End -->
 </body>
 </html>
