--- a/blog.html
+++ b/blog.html
@@ -25,10 +25,4 @@
         <div class="container">
             <section id="blog">
                 <h2>Latest Travel Stories</h2>
-                <p>Welcome to our travel blog, where we share the latest travel stories, tips, and guides to help you make the most of your next adventure.</p>
-            </section>
-        </div>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 
+                <p>Welcome to our travel blog
